Refectoring code in App.config

--- a/Looping/App.config
+++ b/Looping/App.config
@@ -6,7 +6,7 @@
   <appSettings>
     <add key="msg0" value="Hi, All  This is an email automatically created from 'Looping service' to report ping error...Please see attached file."/>
     <add key="msg1" value="Hi, All  This is an email automatically created from 'Looping service' Every thing is ok."/>
-    <add key="Sender_Default" value="zerq.root@gmail.com"/>
+    <add key="Sender_Default" value="xxxxxx@gmail.com"/>
     <add key="Sender_Default_Password" value="xxxxxx"/>
     <add key="Receiver_Default" value="josky2130@gmail.com"/>
     <!--<add key="Smtp_Default" value="xxxxxxx"/>-->
